--- a/index.html
+++ b/index.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
 </head>
+
 <body>
-    
+    <button class="rock">rock</button>
+    <button class="paper">paper</button>
+    <button class="scissors">scissors</button>
 
+    <div class="displayer"></div>
 
+    <div class="scoreboard">
+        <div class="player-score"></div>
+        <div class="computer-score"></div>
+    </div>
     <script src="script.js"></script>
 </body>
+
 </html>
