added basic css and javascript freatures
added basic css

added function to play again and reset the dom

--- a/index.html
+++ b/index.html
@@ -5,20 +5,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Rock Paper Scissors</title>
 </head>
 
 <body>
-    <button class="rock">rock</button>
-    <button class="paper">paper</button>
-    <button class="scissors">scissors</button>
-
+    <div class="title-winner-screen">
+        <h1 class="title">Rock-Paper-Scissors</h1>
+        <div class="winner-screen"></div>
+    </div>
+    <div class="container">
+        <button class="rock">rock</button>
+        <button class="paper">paper</button>
+        <button class="scissors">scissors</button>
+    </div>
+    <div class="scoreboard">
+        <div class="player-score">0</div>
+        <div class="computer-score">0</div>
+    </div>
     <div class="displayer"></div>
 
-    <div class="scoreboard">
-        <div class="player-score"></div>
-        <div class="computer-score"></div>
-    </div>
+    
     <script src="script.js"></script>
 </body>
 
