--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
     <title>Rock Paper Scissors</title>
 </head>
 
 <body>
     <div class="title-winner-screen">
-        <h1 class="title">Rock-Paper-Scissors</h1>
+        <div class="title">Rock-Paper-Scissors</div>
         <div class="winner-screen"></div>
     </div>
     <div class="container">
@@ -20,12 +25,16 @@
         <button class="scissors">scissors</button>
     </div>
     <div class="scoreboard">
-        <div class="player-score">0</div>
-        <div class="computer-score">0</div>
+        <div class="player-stats">Player
+            <div class="player-score">0</div>
+        </div>
+        <div class="computer-stats">Computer
+            <div class="computer-score">0</div>
+        </div>
     </div>
     <div class="displayer"></div>
 
-    
+
     <script src="script.js"></script>
 </body>
 
